src/scss/header-v2/_search.scss
@import 'colors';

.next-header-v2__search-toggle {
	cursor: pointer;

	&:before {
		content: "";
    height: 100%;
    background-color: #000000;
    width: 1px;
    display: block;
    border-right: 1px solid #525151;
    position: absolute;
    top: 0;
	}

	a:after {
		@include nextIcon(search, #ffffff, 20);
		content: '';
	}

	a {
		margin: 10px;
	}

	a span {
		width: 0;
		overflow: hidden;

		@include oGridRespondTo($until: M) {
			line-height: 32px;
		}
	}

	.next-header-v2__search-toggle-text--open {
		display: inline-block;
	}

	.next-header-v2__search-toggle-text--close {
		display: none;
	}

	.next-header-v2__search-checkbox:checked ~ & {
		a:after {
			@include nextIcon(cross, #ffffff, 20);
			content: '';
			position: relative;
		}

		.next-header-v2__search-toggle-text--open {
			display: none;
		}

		.next-header-v2__search-toggle-text--close {
			display: inline-block;
		}
	}
}

.next-header-v2__search-checkbox {
	display: none;
}

.next-header-v2__search-form {
	@include oColorsFor(nav, background);
	visibility: hidden;
	position: absolute;
	overflow: hidden;
	padding: 0 52px;
	top: 2px;
	bottom: 2px;
	right: -14px;
	width: 0;
	z-index: 1;
	transition: 0.2s width 0.25s ease-out, 0.2s left 0.25s ease-out, 0.2s right 0.25s ease-out;

	@include oGridRespondTo(L) {
		right: -6px;
	};

	.next-header-v2__search-checkbox:checked ~ & {
		visibility: visible;
		right: 52px;
		width: 100%;
	}

	.next-header__search-form__input {
		@include oColorsFor(nav, background);
		width: 100%;
		height: 100%;
		margin-left: 40px;
		padding: 0.5em;
		border: 0;
		border-radius: 0;
		outline: none;
		font-family: inherit;
		font-size: inherit;
		color: white;
	}

	.next-header-v2__search-form__button {
		@include oColorsFor(nav, background);
		margin-left: 40px;
		position: absolute;
		left: 0;
		top: 0;
		border: 0;
		cursor: pointer;

		&:before,
		&:after {
	    content: "";
	    height: 100%;
	    background-color: #000000;
	    width: 1px;
	    display: block;
	    border-right: 1px solid #525151;
	    position: absolute;
	    top: 0;
		}

		&:after {
			right: 0;
		}
	}

	.next-header-v2__search-form__button span {
		@include nextIcon(search, #ffffff, 20);
		display: block;
		margin: 8px 8px 8px 14px;
		background-position: center;
		color: transparent;
		overflow: hidden;
	}
}

